--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@types/jquery": "^3.5.1"
+    "@types/jquery": "^3.5.1",
+    "css-loader": "^4.3.0",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.1.0",
+    "postcss-loader": "^4.0.2",
+    "sass": "^1.26.11",
+    "style-loader": "^1.2.1"
   },
   "devDependencies": {
     "sass-loader": "^10.0.2",
@@ -14,7 +20,6 @@
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
   "repository": {
