--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "css-loader": "^4.3.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.1.0",
-    "postcss-loader": "^4.0.2",
+    "linq": "^3.2.3",
+    "postcss-loader": "^4.0.3",
     "sass": "^1.26.11",
-    "style-loader": "^1.2.1"
+    "style-loader": "^1.3.0",
+    "ts-generic-collections-linq": "0.0.3"
   },
   "devDependencies": {
     "sass-loader": "^10.0.2",
@@ -20,7 +22,8 @@
     "webpack-cli": "^3.3.12"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
