--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,6 @@ tests/cases/user/axios-src/axios-src
 tests/cases/user/prettier/prettier
 .eslintcache
 dist/bundle.js
+dist/css/site.css
+dist/clicky.js
+dist/clicky.js.map
