--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "dependencies": {
     "@types/jquery": "^3.5.1",
+    "bootstrap": "^4.5.2",
     "css-loader": "^4.3.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.1.0",
     "linq": "^3.2.3",
-    "postcss-loader": "^4.0.3",
     "sass": "^1.26.11",
     "style-loader": "^1.3.0",
     "ts-generic-collections-linq": "0.0.3"
