--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "@types/jquery": "^3.5.1",
-    "bootstrap": "^4.5.2",
     "css-loader": "^4.3.0",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.1.0",
@@ -15,6 +14,8 @@
     "ts-generic-collections-linq": "0.0.3"
   },
   "devDependencies": {
+    "bootstrap": "^5.0.0-alpha2",
+    "copy-webpack-plugin": "^6.2.0",
     "sass-loader": "^10.0.2",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
